--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello World!>
+  </head>
+  <body>
+    <h1>How are you!</h1>
+  </body>
+  
+</html>
